outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval-5708159400725695440_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (0.2*(1-progress)), shifting focus from short-term efficiency to long-term optimization as progress advances.}
                                                                                                                            ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (0.2*(1-progress)), shifting focus from short-term efficiency to long-term optimization as progress advances.}
                                                                                                                            ^
SyntaxError: unmatched '}'
